# runwhere-ai

./: .gitignore  Dockerfile  Dockerfile.dockerignore  Makefile  README.md  docker-compose.yml  pyproject.toml  tailwind.config.js
data/templates/: team-std-batch.yaml
deploy/k8s/: load-image.sh  runwhere-ai.yaml
docs/: sidecar-agent-design.md  templates-design.md
scripts/: dev-kind-up.sh  install-tailwind.sh  install-vendor-js.sh
src/: __init__.py  config.py  main.py
src/console/: __init__.py  auth.py  consistency.py  forms.py  i18n.py  informer.py  k8s_config.py  k8s_watch.py  models.py  pubsub.py  status_palette.py  telemetry_autoconfig.py  telemetry_store.py  template_store.py  templates_builtin.py  view_models.py
src/webui/: __init__.py  api_telemetry.py  api_templates.py  auth.py  csrf.py  deps.py  errors.py  middleware.py  notebook_proxy.py  templating.py  ws_events.py
src/webui/pages/: __init__.py  cluster_config.py  dashboard.py  quickstart.py  stubs.py
static/css/: runwhere.in.css  tokens.css
static/js/: theme-toggle.js  ui.js
templates/: base.html
templates/components/: badge.html  card.html  conn_status.html  empty.html  error.html  icon.html  loading.html  sidebar.html  theme_toggle.html  topbar.html
templates/pages/: _coming_soon.html  _error.html  _job_detail.html  _listing.html  _listing_tbody.html  _log_fragment.html  cluster_config.html  dashboard.html  login.html  namespace_new.html  pool_new.html  quickstart.html  quickstart_launch.html  quota_edit.html  template_edit.html
tests/: conftest.py
tests/console/: test_auth.py  test_consistency.py  test_forms.py  test_i18n.py  test_informer.py  test_k8s_config.py  test_k8s_watch.py  test_models.py  test_pubsub.py  test_pubsub_wildcard.py  test_status_palette.py
tests/e2e/: conftest.py
tests/webui/: test_boot.py  test_cluster_config.py  test_cluster_config_nfs.py  test_csrf.py  test_job_detail_storage_dist.py  test_job_rows.py  test_list_poll.py  test_list_ws.py  test_log_colors.py  test_namespace_new.py  test_platform_nav.py  test_pool_new.py  test_quota_edit.py  test_ws_events_render.py
tools/: notebook_tunnel.py
