[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "runwhere-ai"
version = "0.1.0"
description = "runwhere-ai 一体化 Web 控制台 — 基于 gpuctl 的 Notebook / Training / Inference / Compute 可视化平台"
authors = [
    {name = "runwhere-org", email = "lingchuanzhou@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.124.2,<1.0.0",
    "uvicorn[standard]>=0.25.0,<1.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "kubernetes-asyncio>=29.0.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "python-dotenv>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-playwright>=0.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "selectolax>=0.3.20",
    "schemathesis>=3.30.0",
    "black>=23.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
runwhere-ai = "src.main:run"

# ── 关键：以"开发模式"path 依赖引用同仓库内的 gpuctl ─────────────────────────
# 让 runwhere-ai 持续享受 gpuctl 的迭代：编辑 gpuctl 源码即时生效，
# 不需要 publish/install 新版本。
[tool.poetry.dependencies]
python = ">=3.10,<4.0"
gpuctl = { path = "../gpuctl", develop = true }

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.report]
# Foundation phase threshold. Bumped to 80 (constitution §III) once E2E
# tests against Kind exercise ws_events.py + auth.py K8s paths.
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "src/main.py",
]
